# SRI-Project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  report.tex  startup.sh
sri_project/: bm25.py  dpr.py  dpr_models.py  drp.py  eval.py  main.py
sri_project/data/: data.csv
sri_project/models/: bm25.py  dpr.py
sri_project/utils/: dataset_loader.py  metrics.py  plot.py  utils.py
