[tool.poetry]
name = "sri-project"
version = "0.1.0"
description = ""
authors = ["Rafael Acosta <theGitNoob@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "nexus"
url = "http://nexus.prod.uci.cu/repository/pypi-proxy/simple/"
priority = "supplemental"


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
torch = "^2.4.0"
faiss-cpu = "^1.8.0.post1"
scikit-learn = "^1.5.1"
datasets = "^2.21.0"
transformers = "^4.44.2"
rank-bm25 = "^0.2.2"
nltk = "^3.9.1"
matplotlib = "^3.9.2"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.3"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120


[tool.mypy]
plugins = ["pydantic.mypy"]
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
